	* phonebook: Löschen von Einträgen (phonebook remove <id>)

	callmonitor-0.5 veröffentlicht

	* controller: Controller mit den gemeinsamen Initialisierungen
	(system.cfg, ...), der dann Applets aufruft

	* phonebook: Argumente prüfen: "phonebook get" hinterließ einen leeren
	Eintrag im Telefonbuch.

	* shstrip: Kommentare beim Zusammenpacken für die Box entfernen

	* callmonitor: Auch IncomingCall-Zeilen mit Präfix erkennen; z.B. bei
	Fritz!Box 7170 (Dank an SatBandit)

2006-01-21

	* messages.sh: dreammessage ist über die Umgebungsvariablen
	DREAM_TIMEOUT, DREAM_CAPTION und DREAM_ICON weiter parametrisierbar

	* callmonitor: "E:" als Präfix beim Quellmuster passt nur beim Ende
	eines Anrufs; das ist nützlich für das Ausführen von Aktionen per
	Telefoncode (auch wenn inkrementell gewählt!). Achtung: Keine Nummern
	mit unerwünschten Nebenwirkungen verwenden. (Unterscheidung NT/nicht
	NT ist nicht möglich.)

2006-01-22
	
	callmonitor-0.6 veröffentlicht

2006-03-18

	* phonebook: Einträge im Telefonbuch endeten fälschlicherweise immer
	mit einem Semikolon; die Rückwärtssuche ist an die Änderungen bei
	dasoertliche.de angepasst (Dank an meimi039); die Adresse bei der
	Rückwärtssuche steht jetzt in Klammern

	Performance-Optimierungen (leider zu Lasten der Lesbarkeit des Codes):
	vom erkanntem Anruf bis zur Regelausführung (getestet bei einer
	einfachen Regel und ohne Rückwärtssuche) nun in ca. einer statt vorher
	in 5 Sekunden (Dank fürs Drängeln an xenon80 :-))

	callmonitor-0.7 veröffentlicht

2006-03-25

	* callmonitor: Effizienteres Logging

	* telefon: Alten Kompatibilitätslink /usr/lib/callmonitor/bin/telefon
	entfernt.

2006-03-29

	* dboxlcd.sh: dboxlcd(): Meldungen auf dem LCD der Dbox anzeigen;
	DBOX_TIMEOUT standardmäßig 10 Sekunden

2006-03-31

	* messages.sh: xboxmessage(): Zweizeilige Meldung (+ Titel) auf der
	X-Box; Titel anpassbar durch XBOX_CAPTION
	
	* phonebook: als Bibliothek in den Callmonitor laden

2006-04-02

	callmonitor-0.8 veröffentlicht