@@ -84,7 +84,8 @@ __work() {
 
     ## enter main loop
     while true; do
-	__read < "$FIFO"
+	##__read < "$FIFO"
+	__read_from_iface
     done
 }
 
